--- a/src/pages/styles.module.css
+++ b/src/pages/styles.module.css
@@ -6,10 +6,10 @@
  */
 
 .heroBanner {
-  padding: 4rem 0;
   text-align: center;
   position: relative;
   overflow: hidden;
+  flex-grow: 1;
 }
 
 @media screen and (max-width: 966px) {
